--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@
         <main>
             <section class="hero">
                 <div class="hero-content">
-                    <h2>Welcome, [User Name]!</h2>
+                    <h2>Welcome,Sri Vishnu Priya !</h2>
                     <p>Your personalized dashboard provides a quick overview of your key information and tasks.</p>
                     <button class="primary-button">Get Started</button>
                 </div>
