--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="logo.png" alt="Company Logo">
+                <img src="logo.jpg" alt="Company Logo">
                 <h1>Enterprise Portal</h1>
             </div>
             <nav>
