--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -193,7 +193,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="logo.jpg" alt="Company Logo" class="logo">
                 <h2>Enterprise Portal</h2>
             </div>
             <nav>
@@ -211,7 +211,7 @@
         <!-- Main Content -->
         <main class="main-content">
             <header class="header">
-                <h1>Welcome, [User Name]!</h1>
+                <h1>Welcome, Sri Vishnu Priya N !</h1>
                 <p>Your personalized dashboard provides an overview of key information.</p>
             </header>
 
